# sound-spring

./: .gitignore  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  Cargo.toml  Makefile  PROJECT.md  README.md  SOUNDBOARD_SPEC.md  SOUNDBOARD_SPEC_PHASE2.md  THIRD_PARTY_NOTICES.md  build.rs  install.sh  uninstall.sh
.github/workflows/: ci.yml
ci/: test-chrome-bindings.sh
docs/: cxx-qt-qml.md  global-shortcuts.md
packaging/flatpak/: com.benkahn.SoundSpring.yml  io.github.benwhite1987.SoundSpring.yml
qml/: AppButton.qml  EnrollmentDialog.qml  Main.qml  SettingsDialog.qml  SettingsSection.qml  ShortcutCapture.qml  SoundButton.qml  SoundSpringTheme.qml  Spectrum.qml  TabPage.qml  VoicePanel.qml  VolumeBar.qml
resources/: sound-spring.desktop
resources/icons/: icons.qrc
scripts/: audio-common.sh  config-common.sh  pipewire-common.sh  play-file.sh  sb-play  sb-stop  sb-tab  setup-pipewire.sh  soundboard-pipewire.service  state-common.sh  sxhkdrc.fragment  tabs-common.sh  test-chrome-bindings.qml  test-chrome-bindings.sh
src/: config.rs  main.rs  state.rs
src/cpp/: app_bootstrap.cpp  app_bootstrap.h  app_icons.h  app_identity.cpp  key_forwarder.cpp  key_forwarder.h  system_tray.cpp  system_tray.h
src/qobjects/: controller.rs  mod.rs  settings.rs  voice_controller.rs
src/services/: audio_meta.rs  autostart.rs  mod.rs  pipewire.rs  player.rs  shortcuts.rs  tabs.rs
src/services/shortcuts/: dedupe.rs  kglobalaccel.rs  mod.rs  portal.rs  status.rs  trigger.rs
src/services/voice/: capture.rs  denoise.rs  embed_worker.rs  embedding.rs  mix_spectrum.rs  mod.rs  output.rs  pipeline.rs  resample.rs  spectrum.rs  spectrum_bars.rs  spectrum_meter.rs  vad.rs  verifier.rs  voiceprint.rs
