[package]
name = "sound-spring"
version = "0.1.0"
edition = "2021"
description = "Sound Spring — PipeWire soundboard for KDE Plasma"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sound-spring"
path = "src/main.rs"

[dependencies]
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "macros", "sync", "time", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
thiserror = "1"
anyhow = "1"
futures-util = "0.3"

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }

[profile.release]
strip = true
